--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,2 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Maxime Blain'
+  github_nickname: 'iMaxx64'
